--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:textSize="16dp"
-        android:text="ItemId"
+        android:text="@string/itemid"
         android:textStyle="bold">
 
     </TextView>
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:textSize="16dp"
-        android:text="Name">
+        android:text="@string/name">
 
     </TextView>
     <TextView
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:textSize="16dp"
-        android:text="Id">
+        android:text="@string/id">
 
     </TextView>
 
